--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/scout": "^8.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "teamtnt/laravel-scout-tntsearch-driver": "^8.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
